fix gecko plugin broken in previous commit

--- a/src/main/resources/style-plugin-gecko.css
+++ b/src/main/resources/style-plugin-gecko.css
@@ -3,6 +3,10 @@
     -fx-max-width: 30em;
 }
 
+.popupWidth {
+    -fx-pref-width: 30em;
+}
+
 .descriptionArea {
     -fx-pref-height: 10em;
     -fx-focus-color: transparent;
